# SOULSTEEL-OFFICIAL

./: CMakeLists.txt  Readme.md
assets/graphics/: outofbounds.aseprite
assets/graphics/aseprite/: bomb.aseprite  bomb_abouttoexplode.aseprite  bomb_exploded.aseprite  grassblue.aseprite  grassesfour.aseprite  grassgray.aseprite  grassgreen.aseprite  grasspink.aseprite  souldust.aseprite  tileset_greyboxing_room1.aseprite
assets/graphics/tilesets/: Map New Room 4 state 2. tmj.tmj  Map New Room 4.tmj  Map Raum 1 Updatet.tmj  Map Raum 1 fertig.json  Map Raum 2 updatet.tmj  Map Raum 2 v4 fertig.tmj  Map Raum 3 Updated.tmj  Map Raum 3 v3 fertig. json.json  Map Raum 5 updated richtige version.tmj  Map Raum 5 updated.tmj  Map Raum 5 v3 fertig .json  Map new Raum 4 state 3.tmj  Room 4 New Greyboxing .tmj  Room 4 New New Greyboxing.tmj  Room 4 new grayboxing state 3.tmj  Tilesheet backgrounds.tsj  Tilesnek.tsj  grasses..tsj  grasses.tsx  grassesfour.tsj  grassmap.tmj  grassmap2.tmj  grassmap_bigger.tmj  grassmap_room3.tmj  outdoor_tileset.tsj  pipe_tiles.tsj  room1.tmj  room10.tmj  room1_greyboxing3.tmj  room1test.tmj  room1test_greyboxing1.tmj  room2.tmj  room2_greyboxing3.tmj  room2test.tmj  room3.tmj  room3_greyboxing3.tmj  room3test_greyboxing1.tmj  room4.tmj  room4test.tmj  room5.tmj  (+9 more)
assets/graphics/tilesets/veraltet/: entrance_tileset.tsj  fence_tileset.tsj  grassesfour.tsx  grassmap_actualsize.tmj  grassmap_room1.tmj  grassmap_room2.tmj  grassmap_room4.tmj  grassmap_room5.tmj  room1_final.tmj  room1_finaltiles.tmj  room1_greyboxing2.tmj  room2_final.tmj  room2_finaltiles.tmj  room2test_greyboxing1.tmj  room3_final.tmj  room3_finaltiles.tmj  room3test.tmj  room4_final.tmj  room4_finaltiles.tmj  tileset_alles.tsj
src/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Enums.h  HealthManager.cpp  HealthManager.h  Utils.cpp  Utils.h  Wall.cpp  Wall.h  assestmanagergraphics.cpp  assestmanagergraphics.h  config.h.in  enemymodus.h  gamechoicescreen.cpp  gamechoicescreen.h  gameplay.cpp  gameplay.h  ingameoptions.cpp  ingameoptions.h  journal.cpp  journal.h  main.cpp  maincharacter.cpp  maincharacter.h  maincharactermodus.h  mainmenu.cpp  mainmenu.h  optionen.cpp  optionen.h  pausescreen.cpp  pausescreen.h  scene.cpp  scene.h
src/ENEMIES/: Enemy.cpp  Enemy.h  Enemy1.cpp  Enemy1.h  Enemy2.cpp  Enemy2.h  Enemy3.cpp  Enemy3.h
src/GAME OBJECTS/: blueblock.cpp  blueblock.h  bombs.cpp  bombs.h  gameobjects.cpp  gameobjects.h  movableblocks.cpp  movableblocks.h  robot.cpp  robot.h  stone.cpp  stone.h  yellowblock.cpp  yellowblock.h
